--- a/.github/workflows/AWS_PROD.yml
+++ b/.github/workflows/AWS_PROD.yml
@@ -27,5 +27,5 @@ jobs:
             echo "Conectando no EC2"
             echo "${{secrets.AWS_KEY}}" > private_key && chmod 600 private_key
             ssh -o StrictHostKeyChecking=no -i private_key ubuntu@ec2-54-209-54-11.compute-1.amazonaws.com "
-            cd /POC_REC &&
+            cd POC_REC/ &&
             git pull"
